Web ui: list apps

--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,18 @@
-<section>
-  <h3>Running applications</h3>
-</section>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dokkuweb</title>
+  <meta charset="utf-8">
+  <link href="css/animations.css" rel="stylesheet" type="text/css">
+  <link href="css/icons.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+  <section id="apps">
+    <h3><span class="anim-pulse icon-sun"></span> Applications</h3>
+  </section>
+
+  <script src="js/lib/promise-0.1.1.min.js"></script>
+  <script src="js/xhr_utils.js"></script>
+  <script src="js/list_apps.js"></script>
+</body>
+</html>
