Web ui: list keys

--- a/static/index.html
+++ b/static/index.html
@@ -5,14 +5,19 @@
   <meta charset="utf-8">
   <link href="css/animations.css" rel="stylesheet" type="text/css">
   <link href="css/icons.css" rel="stylesheet" type="text/css">
+  <script src="js/lib/promise-0.1.1.min.js" defer></script>
+  <script src="js/xhr_utils.js" defer></script>
+  <script src="js/list_apps.js" defer></script>
+  <script src="js/list_keys.js" defer></script>
 </head>
 <body>
   <section id="apps">
-    <h3><span class="anim-pulse icon-sun"></span> Applications</h3>
+    <h2><span class="anim-pulse icon-sun"></span> Applications</h3>
   </section>
 
-  <script src="js/lib/promise-0.1.1.min.js"></script>
-  <script src="js/xhr_utils.js"></script>
-  <script src="js/list_apps.js"></script>
+  <section id="keys">
+    <h2>Your Keys</h3>
+  </section>
+
 </body>
 </html>
