Web ui: Add a unlocking key icon

--- a/static/index.html
+++ b/static/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <section id="apps">
-    <h2><span class="anim-pulse icon-sun"></span> Applications</h3>
+    <h2>Applications <span class="anim-pulse icon-sun"></span> </h2>
   </section>
 
   <section id="keys">
-    <h2>Your Keys</h3>
+    <h2>Your Keys <span class="anim-unlock icon-key"></span></h2>
   </section>
 
   <script src="js/lib/promise-0.1.1.min.js" defer></script>
