Update web ui to use new /apps endpoint. Various changes.

--- a/static/index.html
+++ b/static/index.html
@@ -3,16 +3,17 @@
 <head>
   <title>Dokkuweb</title>
   <meta charset="utf-8">
+  <link href="css/common.css" rel="stylesheet" type="text/css">
   <link href="css/animations.css" rel="stylesheet" type="text/css">
   <link href="css/icons.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <section id="apps">
-    <h2>Applications <span class="anim-pulse icon-sun"></span> </h2>
+  <section id="apps" class="container">
+    <h2>Applications</h2>
   </section>
 
-  <section id="keys">
-    <h2>Your Keys <span class="anim-unlock icon-key"></span></h2>
+  <section id="keys" class="container">
+    <h2>Your Keys</h2>
   </section>
 
   <script src="js/lib/promise-0.1.1.min.js" defer></script>
