--- a/static/index.html
+++ b/static/index.html
@@ -26,5 +26,6 @@
   <script src="js/list_apps.js" defer></script>
   <script src="js/list_keys.js" defer></script>
   <script src="js/add_key.js" defer></script>
+  <script src="js/delete_key.js" defer></script>
 </body>
 </html>
