Show information about the commit that is deployed in list_apps

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
   <link href="css/common.css" rel="stylesheet" type="text/css">
   <link href="css/animations.css" rel="stylesheet" type="text/css">
   <link href="css/icons.css" rel="stylesheet" type="text/css">
+  <link href="css/apps.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <section id="apps" class="container">
