--- a/static/index.html
+++ b/static/index.html
@@ -21,10 +21,17 @@
     </form>
   </section>
 
+  <section id="modal" class="modal-bg">
+    <section class="modal-content">
+      <span class="modal-close icon-remove"></span>
+      <pre></pre>
+    </section>
+  </section>
 
   <script src="js/lib/promise-0.1.1.min.js" defer></script>
   <script src="js/xhr_utils.js" defer></script>
   <script src="js/list_apps.js" defer></script>
+  <script src="js/show_log.js" defer></script>
   <script src="js/list_keys.js" defer></script>
   <script src="js/add_key.js" defer></script>
 </body>
