onReady helper to fire functions after DOMContentLoaded

--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,7 @@
   </section>
 
   <script src="js/lib/promise-0.1.1.min.js" defer></script>
+  <script src="js/ready_utils.js" defer></script>
   <script src="js/xhr_utils.js" defer></script>
   <script src="js/list_apps.js" defer></script>
   <script src="js/show_log.js" defer></script>
