Add key form usability fixes
 - Display error message if submit fails
 - Clear textarea on successfull submit

--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,7 @@
       <textarea name="pubkey" placeholder="Paste ~/.ssh/id_rsa.pub here!"></textarea>
       <button type="submit">Add new key</button>
     </form>
+    <p id="js-addkey-error" class="error"></p>
   </section>
 
   <section id="modal" class="modal-bg">
