--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,14 @@
 <head>
   <title>Dokkuweb</title>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
   <link href="css/common.css" rel="stylesheet" type="text/css">
   <link href="css/animations.css" rel="stylesheet" type="text/css">
   <link href="css/icons.css" rel="stylesheet" type="text/css">
   <link href="css/apps.css" rel="stylesheet" type="text/css">
+  <link href="css/keys.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <section id="keys" class="container">
