List configs. Various style changes.

--- a/static/index.html
+++ b/static/index.html
@@ -33,5 +33,6 @@
   <script src="js/show_env.js" defer></script>
   <script src="js/list_keys.js" defer></script>
   <script src="js/add_key.js" defer></script>
+  <script src="js/list_config.js" defer></script>
 </body>
 </html>
