--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,7 @@
   <script src="js/xhr_utils.js" defer></script>
   <script src="js/list_apps.js" defer></script>
   <script src="js/show_log.js" defer></script>
+  <script src="js/show_env.js" defer></script>
   <script src="js/list_keys.js" defer></script>
   <script src="js/add_key.js" defer></script>
 </body>
