List and delete config in webui

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,7 @@
     <form id="js-addkey" method="POST" action="/cgi-bin/keys">
       <textarea name="pubkey" placeholder="Paste ~/.ssh/id_rsa.pub here!"></textarea>
       <button type="submit">Add new key</button>
+      </div>
     </form>
   </section>
   
