--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
     <h2>Your Keys</h2>
     <form id="js-addkey" method="POST" action="/cgi-bin/keys">
       <textarea name="pubkey" placeholder="Paste ~/.ssh/id_rsa.pub here!"></textarea>
-      <button type="submit">Add new key</button>
+      <button type="submit"><span class="icon-plus"></span> Add new key</button>
       </div>
     </form>
   </section>
